# Cpp

./: READE.md  lista_1 uwagi.txt
egzamin/: Wyrazenia_Lambda.txt  move_semantics.txt
lista_1/: CMakeLists.txt  main.cpp
lista_1_cpp/: CMakeLists.txt  a  main.cpp
lista_2_cpp/: CMakeLists.txt  a  lista_2_cpp.cpp  lista_2_cpp.sln  main.cpp
lista_2_cpp/.kdev4/: lista_2_cpp.kdev4
lista_2_cpp/lista_2_cpp/: a  lista_2_cpp.cpp  lista_2_cpp.kdev4  lista_2_cpp.vcxproj  lista_2_cpp.vcxproj.filters
lista_2_cpp/lista_2_cpp/lista_2_cpp/Debug/: lista_2_cpp.exe.recipe  lista_2_cpp.ilk  vc143.idb
lista_2_cpp/x64/Debug/: lista_2_cpp.exe.recipe  lista_2_cpp.ilk  vc143.idb
lista_2_cpp/x64/Debug/lista_2_cpp.tlog/: CL.command.1.tlog  link.command.1.tlog  link.secondary.1.tlog  link.write.1.tlog  lista_2_cpp.lastbuildstate
lista_3_cpp/: lista_3_cpp.sln  main  main.cpp
lista_3_cpp/lista_3_cpp/: lista_3_cpp.cpp  lista_3_cpp.vcxproj  lista_3_cpp.vcxproj.filters
lista_3_cpp/lista_3_cpp/Debug/: vc143.idb
lista_3_cpp/lista_3_cpp/x64/Debug/: lista_3_cpp.exe.recipe  vc143.idb
lista_4_cpp/: a.out  lista_4_cpp.cpp  lista_4_cpp.vcxproj  lista_4_cpp.vcxproj.filters
lista_4_cpp/lista_4_cpp/Debug/: lista_4_cpp.exe.recipe  lista_4_cpp.ilk  vc143.idb
lista_4_cpp/x64/Debug/: lista_4_cpp.exe.recipe  lista_4_cpp.ilk  vc143.idb
lista_5_cpp/: a.out  main.cpp
lista_6_cpp/lista_6_cpp/: lista_6_cpp.cpp
lista_7_cpp/: a.out  main.cpp
wykłady/: wyklad_cpp_10.txt  wyklad_cpp_2.txt  wyklad_cpp_3.txt  wyklad_cpp_4.txt  wyklad_cpp_6.txt  wyklad_cpp_7  wyklad_cpp_8.txt  wyklad_cpp_9.txt
(+53 files in other folders)
